fix(project featured): hidden overflow

--- a/src/app/[lang]/(site)/components/project-featured/styles.module.css
+++ b/src/app/[lang]/(site)/components/project-featured/styles.module.css
@@ -9,6 +9,7 @@
 }
 
 .project__slide {
+  overflow: hidden;
   padding-left: 24px;
 }
 
